--- a/Dojiwa/package.json
+++ b/Dojiwa/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.5.1",
+    "react-type-animation": "^3.2.0",
     "react-wavify": "^1.11.1"
   },
   "devDependencies": {
