--- a/Dojiwa/package.json
+++ b/Dojiwa/package.json
@@ -15,11 +15,14 @@
     "hamburger-react": "^2.5.2",
     "motion": "^12.10.0",
     "react": "^19.0.0",
+    "react-chrono": "^2.7.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.5.1",
+    "react-slick": "^0.30.3",
     "react-type-animation": "^3.2.0",
-    "react-wavify": "^1.11.1"
+    "react-wavify": "^1.11.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
